--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ dependencies = [
     "requests",
     "types-requests",
     "pyyaml",
+    "pymongo",
+    "pandas",
 ]
 
 [project.urls]
@@ -51,6 +53,7 @@ Changelog = "https://github.com/MarioPasc/ProyectoEstandaresDatos/releases"
 
 [project.scripts]
 datastandards-download = "DataStandards.cli.data:main"
+datastandards-import-gdc = "DataStandards.db.gdc_config:main"
 
 
 [tool.setuptools]
@@ -59,6 +62,7 @@ packages = [
     "DataStandards.cli",
     "DataStandards.data",
     "DataStandards.data.entrypoints",
+    "DataStandards.db",
     "DataStandards.utils"
 ]
 [tool.setuptools.package-data]
