--- a/config/db_mongo/mario_mongodb_config.yaml
+++ b/config/db_mongo/mario_mongodb_config.yaml
@@ -33,7 +33,7 @@ gdc:
 
 options:
   # Si true, elimina la colección antes de insertar (útil para rehacer la carga)
-  drop_collection: false
+  drop_collection: true
 
   # Si true, procesa ficheros STAR-Counts para calcular expression_summary
   # Si false, solo inserta metadatos sin procesar expresión
