--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ version = "0.1.0"
 description = "Proyecto de Estándares de Datos para la gestión y análisis de datos biomédicos"
 readme = "README.md"
 requires-python = ">=3.9"
-license = {file = "LICENSE"}
+license = "MIT"
+license-files = ["LICENSE"]
 keywords = [
     "Estandares de Datos",
 ]
@@ -24,7 +25,6 @@ classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Science/Research",
     "Intended Audience :: Healthcare Industry",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
@@ -61,7 +61,7 @@ biointegrate-import-hgnc = "biointegrate.db.hgnc_config:main"
 biointegrate-import-all = "biointegrate.db.import_all_mongo:main"
 biointegrate-pipeline = "biointegrate.cli.pipeline:main"
 biointegrate-execute-queries = "biointegrate.cli.queries:main"
-biointegrate-populate-ontology = "ontology.scripts.json_to_owl:main"
+biointegrate-populate-ontology = "ontology.owl.json_to_owl:main"
 
 
 [tool.setuptools]
@@ -75,7 +75,9 @@ packages = [
     "biointegrate.quality",
     "biointegrate.queries",
     "ontology",
-    "ontology.scripts"
+    "ontology.owl",
+    "ontology.rdf",
+    "ontology.sparql",
 ]
 [tool.setuptools.package-data]
 biointegrate = ["py.typed"]
